--- a/secondlifeobjectAPP/src/app/app.component.html
+++ b/secondlifeobjectAPP/src/app/app.component.html
@@ -1,6 +1,4 @@
 <app-navbar></app-navbar>
-
-<h1 class="text-center">{{title}}</h1>
-<div class = "container">
+<div class = "container mt-3 mb-3">
   <router-outlet></router-outlet>
 </div>
