--- a/secondlifeobjectAPP/src/app/component/shared/navbar/navbar.component.html
+++ b/secondlifeobjectAPP/src/app/component/shared/navbar/navbar.component.html
@@ -1,15 +1,19 @@
 <div class="container-fluid px-0">
   <nav class="navbar navbar-expand-sm navbar-dark bg-black py-0 px-0">
     <a class="navbar-brand" routerLink="/">
-      <img id="logo" src="https://i.imgur.com/K7Nwq4V.jpg" alt="logo">&nbsp;&nbsp;&nbsp; SecondLifeObject
+      <img id="logo" src="assets/images/logo.jpg" alt="logo">&nbsp;&nbsp;&nbsp; SecondLifeObject
     </a>
     <span class="v-line"></span>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active"><a class="nav-link" routerLink="/">Accueil</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="register">Inscription</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="login">Connexion</a></li>
+        <li class="nav-item active"><a class="nav-link" routerLink="article/show">Voir les annonces</a></li>
+        <li class="nav-item active"><a class="nav-link" routerLink="article/create">Poster une annonce</a></li>
+        <li *ngIf="authority === ''" class="nav-item"><a class="nav-link" routerLink="register">Inscription</a></li>
+        <li *ngIf="authority === ''" class="nav-item"><a class="nav-link" routerLink="login">Connexion</a></li>
         <li *ngIf="authority === 'ADMIN'" class="nav-item"><a class="nav-link" routerLink="admin-home">Espace admin</a></li>
+        <li *ngIf="authority !== ''" class="nav-item"><a class="nav-link" routerLink="profil">Mon compte</a></li>
+        <li *ngIf="authority !== ''" class="nav-item"><a class="nav-link" (click)="logout()" routerLink="login">Logout</a></li>
       </ul>
     </div>
   </nav>
